change: get device status endpoint
