# device-status/src/main/kotlin/com/shusuke/kikurage/devicestatus/presentation/controller/DeviceStatusController.kt
@@ -5,12 +5,12 @@ import com.shusuke.kikurage.devicestatus.presentation.form.GetDeviceStatusRespon
 import org.springframework.web.bind.annotation.*
 
 @RestController
-@RequestMapping("/{device_id}/status")
+@RequestMapping("device")
 @CrossOrigin(origins = ["http://localhost:8003"], allowCredentials = "true")
 class DeviceStatusController(
     private val deviceStatusService: DeviceStatusService
 ) {
-    @GetMapping
+    @GetMapping("/status/{device_id}")
     fun getDeviceStatus(@PathVariable("device_id") deviceId: Long): GetDeviceStatusResponse {
         val status = deviceStatusService.getDeviceStatus(deviceId)
         return GetDeviceStatusResponse(
